crates/bevy_ecs/compile_fail/tests/ui/entity_ref_mut_lifetime_safety.stderr
error[E0502]: cannot borrow `e_mut` as mutable because it is also borrowed as immutable
  --> tests/ui/entity_ref_mut_lifetime_safety.rs:LL:CC
   |
LL |         let gotten: &A = e_mut.get::<A>().unwrap();
   |                          ----- immutable borrow occurs here
LL |         let gotten2: A = e_mut.take::<A>().unwrap();
   |                          ^^^^^^^^^^^^^^^^^ mutable borrow occurs here
LL |
LL |         assert_eq!(gotten, &gotten2); // oops UB
   |         ---------------------------- immutable borrow later used here

error[E0499]: cannot borrow `e_mut` as mutable more than once at a time
  --> tests/ui/entity_ref_mut_lifetime_safety.rs:LL:CC
   |
LL |         let mut gotten: Mut<A> = e_mut.get_mut::<A>().unwrap();
   |                                  ----- first mutable borrow occurs here
LL |         let mut gotten2: A = e_mut.take::<A>().unwrap();
   |                              ^^^^^ second mutable borrow occurs here
LL |
LL |         assert_eq!(&mut *gotten, &mut gotten2); // oops UB
   |                          ------ first borrow later used here

error[E0505]: cannot move out of `e_mut` because it is borrowed
  --> tests/ui/entity_ref_mut_lifetime_safety.rs:LL:CC
   |
LL |     let mut e_mut = world.entity_mut(e);
   |         --------- binding `e_mut` declared here
...
LL |         let gotten: &A = e_mut.get::<A>().unwrap();
   |                          ----- borrow of `e_mut` occurs here
LL |         e_mut.despawn();
   |         ^^^^^ move out of `e_mut` occurs here
LL |
LL |         assert_eq!(gotten, &A(Box::new(14_usize))); // oops UB
   |         ------------------------------------------ borrow later used here

error[E0502]: cannot borrow `e_mut` as mutable because it is also borrowed as immutable
  --> tests/ui/entity_ref_mut_lifetime_safety.rs:LL:CC
   |
LL |         let gotten: &A = e_mut.get::<A>().unwrap();
   |                          ----- immutable borrow occurs here
LL |         let gotten_mut: Mut<A> = e_mut.get_mut::<A>().unwrap();
   |                                  ^^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
LL |
LL |         assert_eq!(gotten, &*gotten_mut); // oops UB
   |         -------------------------------- immutable borrow later used here

error[E0502]: cannot borrow `e_mut` as immutable because it is also borrowed as mutable
  --> tests/ui/entity_ref_mut_lifetime_safety.rs:LL:CC
   |
LL |         let gotten_mut: Mut<A> = e_mut.get_mut::<A>().unwrap();
   |                                  ----- mutable borrow occurs here
LL |         let gotten: &A = e_mut.get::<A>().unwrap();
   |                          ^^^^^ immutable borrow occurs here
LL |
LL |         assert_eq!(gotten, &*gotten_mut); // oops UB
   |                              ---------- mutable borrow later used here

error[E0502]: cannot borrow `e_mut` as mutable because it is also borrowed as immutable
  --> tests/ui/entity_ref_mut_lifetime_safety.rs:LL:CC
   |
LL |         let gotten: &A = e_mut.get::<A>().unwrap();
   |                          ----- immutable borrow occurs here
LL |         e_mut.insert::<B>(B);
   |         ^^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
LL |
LL |         assert_eq!(gotten, &A(Box::new(16_usize))); // oops UB
   |         ------------------------------------------ immutable borrow later used here

error[E0499]: cannot borrow `e_mut` as mutable more than once at a time
  --> tests/ui/entity_ref_mut_lifetime_safety.rs:LL:CC
   |
LL |         let mut gotten_mut: Mut<A> = e_mut.get_mut::<A>().unwrap();
   |                                      ----- first mutable borrow occurs here
LL |         e_mut.insert::<B>(B);
   |         ^^^^^ second mutable borrow occurs here
LL |
LL |         assert_eq!(&mut *gotten_mut, &mut A(Box::new(16_usize))); // oops UB
   |                          ---------- first borrow later used here

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0499, E0502, E0505.
For more information about an error, try `rustc --explain E0499`.
